--- a/diapos/ConfiguracionGenerador.tex
+++ b/diapos/ConfiguracionGenerador.tex
@@ -1,4 +1,4 @@
-% Created 2023-03-11 sáb 09:53
+% Created 2024-02-16 vie 13:09
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -56,22 +56,22 @@
  pdftitle={Configuración Eléctrica del Generador FV en un SFCR},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.2 (Org mode 9.6)}, 
+ pdfcreator={Emacs 29.1 (Org mode 9.6.11)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Configuración Eléctrica del Generador}
-\label{sec:org03a2236}
+\label{sec:org81caf23}
 
-\begin{frame}[label={sec:org5f1eb8c},plain]{}
+\begin{frame}[label={sec:orgba90dca},plain]{}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/ConfiguracionGenerador.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org5cf1480},plain]{Planteamiento}
+\begin{frame}[label={sec:org3407320},plain]{Planteamiento}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/ConfiguracionGenerador.pdf}
 \end{center}
@@ -85,7 +85,7 @@
 \end{align*}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orga36602a}]{Modulos en serie}
+\begin{frame}[label={sec:orgd0560dd}]{Modulos en serie}
 \begin{itemize}
 \item El inversor está diseñado para soportar una \alert{tensión máxima en la
 entrada}, \(V_{max,inv}\).
@@ -105,7 +105,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
 \]
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgc43e455}]{Procedimiento de cálculo}
+\begin{frame}[label={sec:org840b059}]{Procedimiento de cálculo}
 \framesubtitle{Tensión máxima}
 
 \begin{itemize}
@@ -129,7 +129,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orga406547}]{Procedimiento de cálculo}
+\begin{frame}[label={sec:org4a53dc3}]{Procedimiento de cálculo}
 \framesubtitle{Tensión MPP}
 \begin{itemize}
 \item Temperatura de célula (\(G_{stc},\, T_{a}=\qty{25}{\celsius}\))
@@ -145,7 +145,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
   V_{ocM} = V_{ocM}^{*} + (T_{c}- 25)\cdot\frac{dV_{oc}}{dT_{c}}
 \]
 \end{frame}
-\begin{frame}[label={sec:orge650e3f}]{Procedimiento de cálculo}
+\begin{frame}[label={sec:org0b58eb3}]{Procedimiento de cálculo}
 \framesubtitle{Tensión MPP}
 
 \begin{itemize}
@@ -166,7 +166,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
   \end{cases}
 \]
 \end{frame}
-\begin{frame}[label={sec:org4bea56e}]{Ramas en paralelo}
+\begin{frame}[label={sec:org6ef8e67}]{Ramas en paralelo}
 \begin{itemize}
 \item El fabricante del inversor elige los componentes para soportar una \alert{corriente máxima admisible}, \(I_{max,INV}\).
 
@@ -180,7 +180,7 @@ Para \alert{evitar pérdidas} por trabajar en un punto alejado del MPP, la tensi
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orge4dd69e}]{Configuración del generador}
+\begin{frame}[label={sec:orgb953ff0}]{Configuración del generador}
 De los cálculos anteriores se obtiene un \alert{conjunto de configuraciones} del generador que permiten un buen acoplamiento entre inversor y generador. 
 
 Para \alert{elegir una configuración} deben tenerse en cuenta diferentes aspectos:
@@ -199,7 +199,7 @@ estructura.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org44b66e7}]{Configuración eléctrica y estructura}
+\begin{frame}[label={sec:org4a13f85}]{Configuración eléctrica y estructura}
 \begin{itemize}
 \item Es recomendable elegir \alert{series} compuestas por un número de módulos
 que puedan ser ubicados en una \alert{única hilera de la estructura}.
@@ -221,7 +221,7 @@ a las hileras inmediatamente superiores.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb002c42}]{Inversión y rendimiento económicos}
+\begin{frame}[label={sec:org2164fd5}]{Inversión y rendimiento económicos}
 \begin{itemize}
 \item La potencia del generador fotovoltaico está relacionada directamente
 con la \alert{inversión económica} a realizar.
@@ -237,7 +237,7 @@ deseado.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4356579}]{Terreno ocupado}
+\begin{frame}[label={sec:org602aae4}]{Terreno ocupado}
 \begin{itemize}
 \item La potencia del generador es proporcional al área del generador y al \alert{terreno ocupado} (que también influye, aunque en menor grado, en el cálculo económico).
 
@@ -245,7 +245,7 @@ deseado.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5829c24}]{Relación de potencias entre generador e inversor}
+\begin{frame}[label={sec:org9dc7b3d}]{Relación de potencias entre generador e inversor}
 Dado que la potencia entregada por el generador varía con las condiciones meteorológicas, el inversor trabajará en diferentes zonas de su curva de eficiencia.
 
 \begin{center}
@@ -254,7 +254,7 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
 \end{frame}
 
 
-\begin{frame}[label={sec:org8b78d45}]{Relación de potencias entre generador e inversor}
+\begin{frame}[label={sec:org6db85c4}]{Relación de potencias entre generador e inversor}
 \begin{itemize}
 \item Por tanto, una de las preguntas a responder es \alert{que relación debe existir entre la potencia del generador FV y el inversor}.
 \end{itemize}
@@ -268,7 +268,7 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd29a630}]{Relación de potencias entre generador e inversor}
+\begin{frame}[label={sec:orgd8b6093}]{Relación de potencias entre generador e inversor}
 \begin{itemize}
 \item Según el \alert{tipo de sistema} (estático, seguimiento) se debe elegir una relación de potencias de generador e inversor.
 
@@ -279,15 +279,15 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
 \end{frame}
 
 \section{Cableado Eléctrico}
-\label{sec:org0c7f143}
+\label{sec:orgaa6596a}
 
-\begin{frame}[label={sec:orgafc24d8},plain]{}
+\begin{frame}[label={sec:orgfb8e271},plain]{}
 \begin{center}
 \includegraphics[width=\textwidth]{../figs/CableadoCentral.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf391c94}]{Características básicas}
+\begin{frame}[label={sec:org9e368c9}]{Características básicas}
 \begin{itemize}
 \item Criterio de caída de tensión.
 
@@ -297,11 +297,10 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org48ee6c4}]{Criterio de Caída de Tensión}
+\begin{frame}[label={sec:orgc0f8e5b}]{Criterio de Caída de Tensión}
 \begin{itemize}
 \item En primer lugar se calculan las secciones mediante el criterio de caida de tensión (RBT ITC-BT-07):
 \end{itemize}
-
 \begin{align*}
     S_{dc} &=  \frac{2 \cdot L_{dc}\cdot I_{dc}}{\gamma_\theta \cdot \Delta V_{dc}}\\
     S_{1ac} &=  \frac{2\cdot L_{1ac}\cdot I_{1ac}}{\gamma_\theta \cdot \Delta V_{1ac}}\\
@@ -310,15 +309,20 @@ Dado que la potencia entregada por el generador varía con las condiciones meteo
 
 \begin{itemize}
 \item La conductividad del cable, \(\gamma_\theta\), depende del material y de la
-temperatura de operación. Por ejemplo, el cobre:
-\begin{itemize}
-\item \(\gamma_{20} = \qty{58}{\meter\per\ohm\per\milli\meter\squared}\)
-\item \(\gamma_{70} = \qty{48}{\meter\per\ohm\per\milli\meter\squared}\).
-\end{itemize}
+temperatura de operación:
+
+\begin{center}
+\begin{tabular}{lll}
+Material & \(T = \qty{20}{\degree}\) & \(T = \qty{70}{\degree}\)\\[0pt]
+\hline
+Cobre & \(\gamma_{\qty{20}{\degree}} = \qty{58}{\meter\per\ohm\per\milli\meter\squared}\) & \(\gamma_{\qty{70}{\degree}} = \qty{48,47}{\meter\per\ohm\per\milli\meter\squared}\)\\[0pt]
+Aluminio & \(\gamma_{\qty{20}{\degree}} = \qty{35,71}{\meter\per\ohm\per\milli\meter\squared}\) & \(\gamma_{\qty{70}{\degree}} = \qty{29,67}{\meter\per\ohm\per\milli\meter\squared}\)\\[0pt]
+\end{tabular}
+\end{center}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org595f6a4}]{Criterio de Caída de Tensión}
+\begin{frame}[label={sec:org3a70dbd}]{Criterio de Caída de Tensión}
 \begin{itemize}
 \item Según el apartado 5 de la ITC-BT-40, se exige una caída máxima de
 tensión \(\qty{1.5}{\percent}\) de la tensión nominal.
@@ -333,7 +337,7 @@ de los tramos.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9b5c4ad}]{Cálculo por tramos (DC)}
+\begin{frame}[label={sec:org4dab282}]{Cálculo por tramos (DC)}
 \begin{itemize}
 \item Al existir dos tramos y una única condición existe un grado de libertad que permite fijar la sección de uno de los tramos u optimizar el volumen total de conductor empleado.
 
@@ -349,16 +353,17 @@ de los tramos.
 \item \(\Delta U_{inv}\) la caída en el tramo desde una caja de paralelos hasta la entrada del inversor,
 
 \item \(L_i\) la longitud de cableado desde el generador hasta la caja de paralelos,
+
+\item \(I_i\) la corriente que circula desde el generador hasta la caja de paralelos,
+
 \item \(L_{inv}\) la longitud de cableado desde la caja hasta el inversor,
 
-\item \(I_i\) la corriente que circula por este tramo,
-
-\item \(I_{inv}\) la corriente total en el circuito.
+\item \(I_{inv}\) la corriente desde la caja hasta el inversor.
 \end{itemize}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org788e761}]{Ejemplo de cálculo por tramos (DC)}
+\begin{frame}[label={sec:orgf929b0f}]{Ejemplo de cálculo por tramos (DC)}
 En una instalación se agrupan en una caja de paralelos las salidas los generadores ubicados en 20 seguidores, cada uno de ellos con \(\qty{30}{\ampere}\). Esta caja de paralelos está ubicada a \(\qty{200}{\meter}\) del inversor y a \(\qty{30}{\meter}\) de todos los seguidores.
 \begin{align*}
   \frac{\Delta U_{inv}}{\Delta U} &= \frac{1}{1+\sqrt{\frac{\sum_{i=1}^nL_{i}^2
@@ -369,7 +374,7 @@ En una instalación se agrupan en una caja de paralelos las salidas los generado
 Si la tensión nominal de los generadores es de \(\qty{500}{\volt}\), este resultado implica que la sección del tramo de la caja de paralelos al inversor se diseñará con una caída de tensión de \(\num{0.87} \cdot \num{1.5} \cdot 500 /100 = \qty{6.525}{\volt}\). El tramo desde los generadores hasta la caja de paralelos se diseñará con una caída de tensión de \((1 - \num{0.87}) \cdot \num{1.5} \cdot 500 /100 = \qty{0.975}{\volt}\).
 \end{frame}
 
-\begin{frame}[label={sec:org82552ce}]{Cálculo AC}
+\begin{frame}[label={sec:orgb951039}]{Cálculo AC}
 \begin{block}{Ejemplo}
 \begin{itemize}
 \item En una instalación que conduce \(\qty{75}{\ampere}\) a la salida de un
@@ -392,7 +397,7 @@ inversor a la red se realizará con tres cables de sección
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org5a16182}]{Intensidad Máxima Admisible}
+\begin{frame}[label={sec:orgafe5267}]{Intensidad Máxima Admisible}
 \begin{itemize}
 \item Con este resultado, es necesario comprobar que la intensidad de diseño es inferior a la intensidad máxima admisible del cable para sus condiciones de servicio, según las tablas de la ITC-BT-07.
 
@@ -400,7 +405,7 @@ inversor a la red se realizará con tres cables de sección
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0c9b1ce}]{Continua vs. Alterna}
+\begin{frame}[label={sec:org4557215}]{Continua vs. Alterna}
 Suponiendo que en una planta con varios inversores trifásicos existe la
 posibilidad de ubicar los inversores debajo del generador FV
 (\emph{distribución en alterna}) o en un centro específico junto al punto de
@@ -408,8 +413,39 @@ conexión a red (\emph{distribución en continua}), \alert{¿cuál es la tensió
 trabajo en continua que permite optar por una distribución en continua?}
 
 Se puede demostrar que para tensiones de generador \(V_{mpp} \geq
-\qty{473}{\volt}\), la distribución en continua es preferible a la
+\qty{475}{\volt}\), la distribución en continua es preferible a la
 distribución en alterna desde el punto de vista de masa de conductor
 necesario.
+\end{frame}
+
+
+\begin{frame}[label={sec:orgcdc786e}]{Estrategia de Cableado}
+\begin{block}{Secuencial (\emph{daisy chain wiring})}
+\begin{center}
+\includegraphics[width=\textwidth]{../figs/DaisyChainWiring.png}
+\end{center}
+
+\begin{itemize}
+\item Es el modo habitual (todos los instaladores lo conocen).
+\item Requiere cable de retorno.
+\item El cable sobrante entre módulos debe quedar bien sujeto.
+\item Puede requerir más tiempo de instalación.
+\end{itemize}
+\end{block}
+\end{frame}
+
+\begin{frame}[label={sec:org319775f}]{Estrategia de Cableado}
+\begin{block}{Salteado (\emph{leapfrog wiring})}
+\begin{center}
+\includegraphics[width=\textwidth]{../figs/LeapfrogWiring.png}
+\end{center}
+
+\begin{itemize}
+\item No requiere cable de retorno.
+\item Hay que comprobar que la longitud del cable del módulo es suficiente.
+\item Hay menos cable sobrante entre módulos.
+\item Puede requerir menos tiempo de instalación.
+\end{itemize}
+\end{block}
 \end{frame}
 \end{document}
